--- a/unbound.yaml
+++ b/unbound.yaml
@@ -26,7 +26,7 @@ spec:
       #
       containers:
       - name:  unbound
-        image:  cmvance/unbound-rpi:1.17.1
+        image:  mvance/unbound-rpi:1.17.1
         imagePullPolicy: IfNotPresent
         resources:
           requests:
