--- a/blocky.yaml
+++ b/blocky.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: blocky-config
-  namespace: blocky
+  namespace: unbound
 data:
   config.yml: |-
     upstream:
@@ -42,7 +42,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: blocky-service
-  namespace: blocky
+  namespace: unbound
 spec:
   selector:
     app: blocky
@@ -66,7 +66,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: blocky
-  namespace: blocky
+  namespace: unbound
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -93,7 +93,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: blocky
-  namespace: blocky
+  namespace: unbound
 spec:
   replicas: 1
   selector:
